# pure2p

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  QUICKSTART.md  README.md  ROADMAP.md  USAGE.md  prompts.md
landing/: index.html
src/: connectivity.rs  crypto.rs  lib.rs  messaging.rs  protocol.rs  queue.rs  storage.rs  transport.rs
src/connectivity/: cgnat.rs  gateway.rs  health_check.rs  http_ip.rs  ipv6.rs  manager.rs  mod.rs  natpmp.rs  orchestrator.rs  pcp.rs  types.rs  upnp.rs
src/storage/: app_state.rs  chat.rs  contact.rs  message.rs  mod.rs  settings.rs  settings_manager.rs  storage_db.rs
src/tests/: connectivity_tests.rs  crypto_tests.rs  lib_tests.rs  messaging_tests.rs  mod.rs  protocol_tests.rs  queue_tests.rs  storage_tests.rs  transport_tests.rs  tui_tests.rs
src/tests/storage_tests/: app_state_tests.rs  chat_tests.rs  contact_tests.rs  mod.rs  request_log_tests.rs  settings_tests.rs  token_tests.rs
src/tests/tui_tests/: app_tests.rs  mod.rs  screens_tests.rs  types_tests.rs  ui_tests.rs
src/tests/tui_tests/app_tests/: chat_management_tests.rs  contact_import_tests.rs  helpers.rs  initialization_tests.rs  messaging_tests.rs  mod.rs  navigation_tests.rs  startup_tests.rs
src/tests/tui_tests/screen_tests/: chat_list_tests.rs  chat_view_tests.rs  diagnostics_tests.rs  import_contact_tests.rs  mapping_consent_tests.rs  mod.rs  settings_tests.rs  share_contact_tests.rs  startup_sync_tests.rs  status_indicators_tests.rs
src/tui/: app.rs  clipboard.rs  mod.rs  screens.rs  types.rs  ui.rs
src/tui/ui/: chat_list.rs  chat_view.rs  diagnostics.rs  helpers.rs  import_contact.rs  main_menu.rs  mapping_consent.rs  mod.rs  settings.rs  share_contact.rs  startup_sync.rs
