[package]
name = "pure2p"
version = "0.3.0"
edition = "2024"
authors = ["Pure2P Team"]
description = "A pure peer-to-peer messaging system with cross-platform support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Anton4ikk/pure2p"

[lib]
name = "pure2p"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "pure2p-tui"
path = "src/bin/tui.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP/2 and networking
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = "2.0"
curve25519-dalek = "4.1"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"

# Utilities (used by library)
hex = "0.4"
base64 = "0.22"

# UPnP/IGD for port mapping
igd-next = "0.14"

# TUI dependencies
ratatui = "0.26"
crossterm = "0.27"
arboard = "3.3"  # Clipboard support

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
